// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionButton /> rendering Matches snapshot 1`] = `
<View
  onTouchEnd={[Function]}
  style={
    Object {
      "alignItems": "flex-end",
      "borderRadius": 8,
      "flexDirection": "row",
      "height": "50%",
      "justifyContent": "center",
      "opacity": 0,
      "padding": 10,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 10,
    }
  }
>
  <Text />
</View>
`;

exports[`<ActionButton /> rendering Matches snapshot with children 1`] = `
<View
  onTouchEnd={[Function]}
  style={
    Object {
      "alignItems": "flex-end",
      "borderRadius": 8,
      "flexDirection": "row",
      "height": "50%",
      "justifyContent": "center",
      "opacity": 0,
      "padding": 10,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 10,
    }
  }
>
  <Text>
    Hello
  </Text>
</View>
`;
